--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0-beta1",
+    "i18next": "^21.8.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "luxon": "^2.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0-beta.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
     "web-vitals": "^2.1.4"
